src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  color: #213547;
  background-color: #ffffff;
  --primary-color: #213547;
  --secondary-color: #777;
  --background-color: #ffffff;
  --background-color-secondary: #f0f0f0;
  --dialog-background-color: rgba(255, 255, 255, 0.4);
  --dialog-menu-background-color: rgba(255, 255, 255, 0.9);
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html,
body,
#root {
  height: 100%;
  margin: 0;
}

#root {
  /* padding:23px; */
  box-sizing: border-box;
  /* box-shadow:
    inset #19d4ff 0 0 0 5px,
    inset #18cdf7 0 0 0 1px,
    inset #53dfff 0 0 0 10px,
    inset #50d8f7 0 0 0 11px,
    inset #8ce9ff 0 0 0 16px,
    inset #88e2f7 0 0 0 17px,
    inset #c5f4ff 0 0 0 22px,
    inset #bfecf7 0 0 0 23px; */
}

[onPointerUp], a {
  cursor: pointer;
}

.material-icons-svg {
  user-select: none;
  fill: currentColor;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }

  a:hover {
    color: #747bff;
  }

  button {
    background-color: #f9f9f9;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    color: #f9f9f9;
    background-color: #242424;
    --primary-color: #f9f9f9;
    --secondary-color: #555;
    --background-color: #242424;
    --background-color-secondary: #3a3a3a;
    --dialog-background-color: rgba(0, 0, 0, 0.4);
    --dialog-menu-background-color: rgba(0, 0, 0, 0.9);
  }

  a:hover {
    color: #535bf2;
  }

  button {
    background-color: #1a1a1a;
  }
}

@keyframes pulsate {
  0% {
    background-color: transparent;
  }
  100% {
    background-color: lightgreen;
  }
}

.offline-icon {
  position: relative;
  display: inline-flex;
  flex-shrink: 0;
  width: 4em;
  height: 4em;

  > .material-icons-svg {
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    fill: var(--primary);
  }

  > .material-icons-svg:last-child {
    top: -1px;
    left: 1px;
    width: 98%;
    height: 98%;
    clip-path: circle(35% at center);
    fill: var(--background-color);
    filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.5));
  }
}

